--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "datasets>=4.3.0",
+    "datasets==2.21.0",
     "evaluate>=0.4.6",
     "ipykernel>=7.0.1",
     "pandas>=2.3.3",
